--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ matrix:
       env: RAKE_TASK=spec
     - rvm: 2.4.6
       env: RAKE_TASK=spec
+    - rvm: 2.4.2
+      env: RAKE_TASK=spec
     - rvm: 2.4.6
       os: osx
       env: RAKE_TASK=spec
