--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ cache: bundler
 addons:
   apt:
     packages:
-      - google-chrome-69.0.3497.100
+      - chromium-browser-69.0.3497.100
+#      - google-chrome-69.0.3497.100 fails on ubuntu but works on mac
 #      - chromium-browser
       - libgconf-2-4
   chrome: stable
