--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ addons:
 #      - google-chrome-69.0.3497.100 fails on ubuntu but works on mac
       - chromium-browser
       - libgconf-2-4
-  chrome: stable
+#  chrome: stable
+  chrome: 69.0.3497.100
 script: bundle exec rake $RAKE_TASK
 matrix:
   include:
