Revert "use google-chrome-beta"
This reverts commit 8f814cbf10abfd6625511c5c0e78a33bc9412e4f.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ cache: bundler
 addons:
   apt:
     packages:
-      - google-chrome-beta
-#      - chromium-browser
+      - chromium-browser
       - libgconf-2-4
   chrome: stable
 script: bundle exec rake $RAKE_TASK
