Revert "use google chrome 69.0.3497.100"
This reverts commit 03500c1c96de1dbf61e5b0d3d197406752fc3d74.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ cache: bundler
 addons:
   apt:
     packages:
-      - google-chrome-69.0.3497.100
+      - google-chrome-beta
 #      - chromium-browser
       - libgconf-2-4
   chrome: stable
