Revert "mac works but ubuntu doesn't"
This reverts commit 1456c75c1ef34c77c80276ac4a6b6eac5df4782a.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ cache: bundler
 addons:
   apt:
     packages:
-      - chromium-browser-69.0.3497.100
-#      - google-chrome-69.0.3497.100 fails on ubuntu but works on mac
+      - google-chrome-69.0.3497.100
 #      - chromium-browser
       - libgconf-2-4
   chrome: stable
