Revert "try unstable chrome"
This reverts commit 0ff3c15e5c5dde6343337117ec6f0afad1aada04.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ addons:
       - chromium-browser
       - libgconf-2-4
 #  chrome: stable
-#  chrome: 69.0.3497.100
-  chrome: unstable
+  chrome: 69.0.3497.100
 script: bundle exec rake $RAKE_TASK
 matrix:
   include:
